* Mon Nov 18 2002 Philip Tellis
- Multiple offline messages are now received correctly
- Memory leaks cleaned up
- Check for glib-2 as well as glib-1
- dropped port 21 from port scan
- Added a spec file for RPM

* Sat Nov 16 2002 Rodney Dawes
- Make libyahoo2 versioned
- Add a pkgconfig file
- Install headers in $(pkgincludedir)
- Make yahoo sample client a noinst program
- Require autoconf >= 2.50
- Cleanups in configure.ac

* Wed Nov 13 2002 Philip Tellis
- libyahoo2 now automatically scans ports 21, 23, 25 and 80 if it cannot 
connect on the default port.

* Wed Nov 06 2002 Philip Tellis
- added protocol documentation

* Tue Nov 05 2002 Philip Tellis
- compiles with -ansi and -pedantic

* Sat Oct 10 2002 Philip Tellis
- no longer strip colour/style codes from messages
- added colour entry for any colour to yahoo2_types.h (Nelson Ferreira)


* Fri Oct 18 2002 Philip Tellis (version 0.6.1)
- fixed segfault on some weird notification packets
- fixes for conference add invite
- identity support for conferences

- sample console client can handle conferencing

* Wed Oct 9 2002 Philip Tellis (version 0.6)
- Removed glib dependencies.  Will use glib only if available
- Configure time option --with-struct-callbacks to use a callback struct
instead of callback functions (see yahoo2_callbacks.h and the README)
- Code cleanups by Steve McAndrewSmith
- Get identities from server
- Activate/Deactivate identities
- Use identities when sending messages
- Fixed buffer overflow in key/value pair reading

- sample console client no longer requires gtk!

* Mon Jul 22 2002 Philip Tellis (version 0.5)
- Added basic documentation to README
- Several minor code fixes and cleanups

* Sat Jul 20 2002 Philip Tellis (version 0.5.cvs)
This is an initial public release as a separate library
I'll put a feature list in later.
0.5 is just a random version number, I figure it's got half the features
of where it should be when complete.