@@ -1,10 +1,11 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_PREREQ(2.50)
 
-AC_INIT(libyahoo2, 0.6.2cvs)
+AC_INIT(libyahoo2, 0.6.1)
+
 AC_CONFIG_SRCDIR(config.h.in)
 
-RELEASE="1"
+RELEASE="3-"
 
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 AM_CONFIG_HEADER(config.h)
@@ -20,7 +21,7 @@ dnl # +1 :  0 :  0   == removed/changed an interface. Breaks old apps.
 dnl #  ? : +1 :  ?   == internal changes that doesn't break anything.
 dnl #
 dnl # CURRENT : REVISION : AGE
-YAHOO2_CURRENT=1
+YAHOO2_CURRENT=2	# vesion 1 was pre 0.6
 YAHOO2_REVISION=0
 YAHOO2_AGE=0
 YAHOO2_VERSION="$YAHOO2_CURRENT:$YAHOO2_REVISION:$YAHOO2_AGE"
@@ -72,8 +73,8 @@ CHANGELOG=ChangeLog
 AC_SUBST(DATE)
 DATE=`date +"%Y%m%d"`
 
-if echo "$VERSION" | grep cvs >/dev/null 2>&1; then
-	RELEASE="$DATE"
+if echo "$RELEASE" | grep '-' >/dev/null 2>&1; then
+	RELEASE="$RELEASE$DATE"
 fi
 AC_SUBST(RELEASE)
 
