@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: @PACKAGE@
 Description: Library for the Yahoo! Messenger Protocol
-Version: @VERSION@
+Version: @VERSION@-@RELEASE@
 Requires: @YAHOOPKGREQ@
 Libs: -L${libdir} -lyahoo2
 Cflags: -I${includedir}/@PACKAGE@
