@@ -1,3 +1,6 @@
+* Tue Nov 19 2002 Philip Tellis
+- Added code to process a voice chat invite
+
 * Mon Nov 18 2002 Philip Tellis
 - Multiple offline messages are now received correctly
 - Memory leaks cleaned up
